exports[`test Button changes the class when hovered 1`] = `
<button
  className="ds-button normal"
  href="#"
  onClick={undefined}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}>
  Test Button
</button>
`;

exports[`test Button changes the class when hovered 2`] = `
<button
  className="ds-button-hovered"
  href="#"
  onClick={undefined}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}>
  Test Button
</button>
`;

exports[`test Button changes the class when hovered 3`] = `
<button
  className="ds-button normal"
  href="#"
  onClick={undefined}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}>
  Test Button
</button>
`;

exports[`test Button changes the class when hovered 4`] = `
<button
  className="ds-button-down"
  href="#"
  onClick={undefined}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}>
  Test Button
</button>
`;
